--- a/Areas/User/Views/Contact/Index.cshtml
+++ b/Areas/User/Views/Contact/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OtherBannerModel;
 @{
-    ViewData["Title"] = "Reading Blog";
+    ViewData["Title"] = "Contact";
 }
 
 <partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />
