--- a/Areas/User/Views/Shop/Cart.cshtml
+++ b/Areas/User/Views/Shop/Cart.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OtherBannerModel;
 @{
-    ViewData["Title"] = "Shopping Page";
+    ViewData["Title"] = "Cart";
 }
 
 <partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />
@@ -118,7 +118,7 @@
                         <li>Subtotal <span>$454.98</span></li>
                         <li>Total <span>$454.98</span></li>
                     </ul>
-                    <a href="#" class="primary-btn">PROCEED TO CHECKOUT</a>
+                    <a class="btn btn-primary" asp-controller="Checkout" asp-action="">PROCEED TO CHECKOUT</a>
                 </div>
             </div>
         </div>
