--- a/Areas/User/Views/Shop/Detail.cshtml
+++ b/Areas/User/Views/Shop/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OtherBannerModel;
 @{
-    ViewData["Title"] = "Details Page";
+    ViewData["Title"] = "Detail";
 }
 
 <partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />
