--- a/Areas/User/Views/Shop/Index.cshtml
+++ b/Areas/User/Views/Shop/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OtherBannerModel;
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Shop";
 }
 
 <partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />
