--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TuanLocUyenVegetables
-@using TuanLocUyenVegetables.Models
+﻿@using TH4_Nhom20
+@using TH4_Nhom20.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
