--- a/Views/Shared/_HeaderPartial.cshtml
+++ b/Views/Shared/_HeaderPartial.cshtml
@@ -46,14 +46,14 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a asp-controller="Home" asp-action=""><img src="~/img/logo.png" alt=""></a>
+                        <a asp-area="User" asp-controller="Home" asp-action=""><img src="~/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class=@isHomeShowing><a asp-controller="Home" asp-action="">Home</a></li>
-                            <li class=@isShopShowing><a asp-controller="Shop" asp-action="">Shop</a></li>
+                            <li class=@isHomeShowing><a asp-area="User" asp-controller="Home" asp-action="">Home</a></li>
+                            <li class=@isShopShowing><a asp-area="User" asp-controller="Shop" asp-action="">Shop</a></li>
                             <li>
                                 <a href="#">Pages</a>
                                 <ul class="header__menu__dropdown">
@@ -92,11 +92,10 @@
                             <i class="fa fa-bars"></i>
                             <span>All departments</span>
                         </div>
-                    <ul style="display: none;">
-                        <li><a href="#">Canont</a></li>
-                        <li><a href="#">Nikon</a></li>
+                        <ul style="display: none;">
+                            <li><a href="#">Canon</a></li>
+                            <li><a href="#">Nikon</a></li>
                             <li><a href="#">Sony</a></li>
-                           
                         </ul>
                     </div>
                 </div>
@@ -127,7 +126,3 @@
         </div>
     </section>
     <!-- Hero Section End -->
-    @if(isHomeShowing.Equals("active"))
-    {
-        <partial name="_HomeBannerPartial" />;
-    }
