--- a/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    // ~/Areas/User/Views/Shared/_Layout.cshtml
+    Layout = "./Shared/_Layout.cshtml";
 }
