--- a/Areas/User/Views/Shop/Cart.cshtml
+++ b/Areas/User/Views/Shop/Cart.cshtml
@@ -3,7 +3,10 @@
     ViewData["Title"] = "Cart";
 }
 
-<partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />
+<!--<partial name="_OtherBannerPartial" model="@Model" view-data="ViewData" />-->
+<vc:big-banner Title="Shopping Cart"
+               SubTitle="Surplus is good, but enough is better."></vc:big-banner>
+
 <!-- Shoping Cart Section Begin -->
 <section class="shoping-cart spad">
     <div class="container">
