--- a/Views/Shared/Components/BigBanner/Default.cshtml
+++ b/Views/Shared/Components/BigBanner/Default.cshtml
@@ -1,5 +1,4 @@
-﻿<!--
-@model OtherBannerModel;
+﻿@model OtherBannerModel;
 
 <!-- Breadcrumb Section Begin -->
 <section class="breadcrumb-section set-bg" data-setbg="/img/breadcrumb.jpg">
