--- a/Areas/User/Views/Shared/_UserHeaderPartial.cshtml
+++ b/Areas/User/Views/Shared/_UserHeaderPartial.cshtml
@@ -8,11 +8,10 @@
     <header class="header">
         <div class="header__top">
             <div class="container">
-                <div class="row">
+            <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
                                 <li>Free Shipping for all Order of $99</li>
                             </ul>
                         </div>
@@ -35,7 +34,7 @@
                                 </ul>
                             </div>
                             <div class="header__top__right__auth">
-                                <a href="#"><i class="fa fa-user"></i> Login</a>
+                                <partial name="~/Views/Shared/_LoginPartial.cshtml" />
                             </div>
                         </div>
                     </div>
