--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -53,17 +53,9 @@
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a asp-controller="Home" asp-action="">Home</a></li>
-                <li><a asp-controller="Shop" asp-action="">Shop</a></li>
-                <li>
-                    <a href="#">Pages</a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="./checkout.html">Check Out</a></li>
-                        <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                    </ul>
-                </li>
-                <li><a asp-controller="Blog" asp-action="">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a asp-area="Admin" asp-controller="" asp-action="">Home</a></li>
+                <li><a asp-area="Admin" asp-controller="Cameras" asp-action="">All Cameras</a></li>
+                <li><a asp-area="Admin" asp-controller="Cameras" asp-action="Create">Create a new camera</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
