--- a/Areas/User/Views/Home/Index.cshtml
+++ b/Areas/User/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home";
+    int amountOfCameras = ViewBag.AmountOfCamera;
 }
 
 <!-- Banner Section Begin -->
-<div class="container banner-container">
-    <div class="banner set-bg" data-setbg="@ViewBag.Cameras[0].ImageUrls.Split(';')[0]">
-        <div class="banner__text">
+<div class="container big-banner-container">
+    <div class="big-banner set-bg" data-setbg="@ViewBag.Cameras[0].ImageUrls.Split(';')[0]">
+        <div class="big-banner__text">
             <span>GREATEST CAMERA</span>
             <h2>Camera <br />100% Quality</h2>
             <p>Free Pickup and Delivery Available</p>
@@ -62,7 +63,7 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">@item.Name</a></h6>
+                            <h6><a href="User/Shop/Details/@item.Id">@item.Name>@item.Name</a></h6>
                             <h5>@item.Price đ</h5>
                         </div>
                     </div>
@@ -73,17 +74,25 @@
 </section>
 <!-- Featured Section End -->
 <!-- Banner Begin -->
-<div class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="banner__pic">
-                    <img src="img/banner/banner-1.jpg" alt="">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="banner set-bg" data-setbg="/images/others/user_home_banner1.png">
+                <div class="banner__text">
+                    <span>Sale off 10%</span>
+                    <h2>Sony's camera</h2>
+                    <p>Let's buy something</p>
+                    <a href="#" class="primary-btn">SHOP NOW</a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="banner__pic">
-                    <img src="img/banner/banner-2.jpg" alt="">
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="banner set-bg" data-setbg="/images/others/user_home_banner2.png">
+                <div class="banner__text">
+                    <span>Best seller</span>
+                    <h2>Mirrorless <br />and more...</h2>
+                    <p>Delivery now!</p>
+                    <a href="#" class="primary-btn">SHOP NOW</a>
                 </div>
             </div>
         </div>
@@ -98,64 +107,27 @@
                 <div class="latest-product__text">
                     <h4>Latest Products</h4>
                     <div class="latest-product__slider owl-carousel">
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
+                        @for (int i = 0; i < amountOfCameras / 3 + 1; i++)
+                        {
+                            if (i > 3) break;
+                            int start = i * 3;
+                            // amountOfCameras
+                            <div class="latest-prdouct__slider__item">
+                                @for (int j = start; j < start + 3; j++)
+                                {
+                                    if (j >= amountOfCameras) break;
+                                    <a href="User/Shop/Details/@ViewBag.Cameras[j].Id" class="latest-product__item">
+                                        <div class="latest-product__item__pic">
+                                            <img src="~/@ViewBag.Cameras[j].ImageUrls.Split(';')[0]" alt="">
+                                        </div>
+                                        <div class="latest-product__item__text">
+                                            <h6>@ViewBag.Cameras[j].Name</h6>
+                                            <span>@ViewBag.Cameras[j].Price đ</span>
+                                        </div>
+                                    </a>
+                                }
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
@@ -163,64 +135,27 @@
                 <div class="latest-product__text">
                     <h4>Top Rated Products</h4>
                     <div class="latest-product__slider owl-carousel">
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
+                        @for (int i = 0; i < amountOfCameras / 3 + 1; i++)
+                        {
+                            if (i > 3) break;
+                            int start = i * 3;
+                            // amountOfCameras
+                            <div class="latest-prdouct__slider__item">
+                                @for (int j = start; j < start + 3; j++)
+                                {
+                                    if (j >= amountOfCameras) break;
+                                    <a href="User/Shop/Details/@ViewBag.Cameras[j].Id" class="latest-product__item">
+                                        <div class="latest-product__item__pic">
+                                            <img src="~/@ViewBag.Cameras[j].ImageUrls.Split(';')[0]" alt="">
+                                        </div>
+                                        <div class="latest-product__item__text">
+                                            <h6>@ViewBag.Cameras[j].Name</h6>
+                                            <span>@ViewBag.Cameras[j].Price đ</span>
+                                        </div>
+                                    </a>
+                                }
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
@@ -228,64 +163,27 @@
                 <div class="latest-product__text">
                     <h4>Review Products</h4>
                     <div class="latest-product__slider owl-carousel">
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="latest-prdouct__slider__item">
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-1.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-2.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                            <a href="#" class="latest-product__item">
-                                <div class="latest-product__item__pic">
-                                    <img src="img/latest-product/lp-3.jpg" alt="">
-                                </div>
-                                <div class="latest-product__item__text">
-                                    <h6>Crab Pool Security</h6>
-                                    <span>$30.00</span>
-                                </div>
-                            </a>
-                        </div>
+                        @for (int i = 0; i < amountOfCameras / 3 + 1; i++)
+                        {
+                            if (i > 3) break;
+                            int start = i * 3;
+                            // amountOfCameras
+                            <div class="latest-prdouct__slider__item">
+                                @for (int j = start; j < start + 3; j++)
+                                {
+                                    if (j >= amountOfCameras) break;
+                                    <a href="User/Shop/Details/@ViewBag.Cameras[j].Id" class="latest-product__item">
+                                        <div class="latest-product__item__pic">
+                                            <img src="~/@ViewBag.Cameras[j].ImageUrls.Split(';')[0]" alt="">
+                                        </div>
+                                        <div class="latest-product__item__text">
+                                            <h6>@ViewBag.Cameras[j].Name</h6>
+                                            <span>@ViewBag.Cameras[j].Price đ</span>
+                                        </div>
+                                    </a>
+                                }
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
