--- a/Views/Shared/Components/BigBanner/Default.cshtml
+++ b/Views/Shared/Components/BigBanner/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OtherBannerModel;
 
 <!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-section set-bg" data-setbg="/img/breadcrumb.jpg">
+<section class="breadcrumb-section set-bg" data-setbg="/images/others/hero_banner.jpg">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
